# cgas

./: .gitignore
rust-workflow-engine/: Cargo.toml  OPTIMIZATION_README.md  README.md
rust-workflow-engine/proto/: batch_nested.proto  transaction.proto  transaction_isolation.proto
rust-workflow-engine/scripts/: performance_baseline.sh  performance_baseline_v2.sh
rust-workflow-engine/src/: blackboard_agent.rs  contract.rs  engine.rs  error.rs  executor.rs  gate_report.rs  gates.rs  lib.rs  main.rs  model.rs  workflow_plan.rs
rust-workflow-engine/src/batch/: executor.rs  hash.rs  mod.rs  types.rs
rust-workflow-engine/src/metrics/: metrics_20_batch4_impl.rs  mod.rs
rust-workflow-engine/src/optimization/: async_pool.rs  boundary_fixes_batch2.rs  incremental_replay.rs  lockfree_cache.rs  mod.rs  object_pool.rs  p99_consolidation_optimization.rs  parallel_verifier.rs  performance_optimization.rs  throughput_optimization.rs  validation_cache.rs  verifier_pipeline_optimization.rs  work_stealing_executor.rs
rust-workflow-engine/src/scanner/: mod.rs  scanner_optimizer.rs
rust-workflow-engine/src/security/: audit_log.rs  mod.rs  oidc.rs  oidc_provider_impl.rs  opa_policy_engine.rs  rbac.rs  security_gates_week3_impl.rs  threat_detection_impl.rs
rust-workflow-engine/src/transaction/: executor.rs  (+6 more)
rust-workflow-engine/tests/: batch_integration_test.rs  batch_nested_test.rs  integration_regression_test.rs  optimization_test.rs  optimization_week3_test.rs  performance_stress_test.rs  security_integration_test.rs  transaction_integration_test.rs  transaction_rr_test.rs
(+558 files in other folders)
