[package]
name = "rust-workflow-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
legacy-tests = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.21"
thiserror = "2"
chrono = "0.4"
log = "0.4"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "6"
parking_lot = "0.12"
sha2 = "0.10"
num_cpus = "1"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.4"
